...
            "state": "translated",
            "value": "Corso"
          }
        }
      }
    },
    "Courses": {
      "localizations": {
        "it": {
          "stringUnit": {
            "state": "translated",
            "value": "Corsi"
          }
...
            "state": "translated",
            "value": "Modifica pure qui sotto. Nulla viene attivato: scegli tu dopo cosa studiare."
          }
        }
      }
    },
    "Email": {
      "localizations": {
        "it": {
          "stringUnit": {
            "state": "translated",
            "value": "Email"
          }
...
            "state": "translated",
            "value": "Difficile"
          }
        }
      }
    },
    "Home": {
      "localizations": {
        "it": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
          }
...
            "state": "translated",
            "value": "Passaggi: %lld"
          }
        }
      }
    },
    "Password": {
      "localizations": {
        "it": {
          "stringUnit": {
            "state": "translated",
            "value": "Password"
          }
...
            "state": "translated",
            "value": "Elaborazione…"
          }
        }
      }
    },
    "Progress": {
      "localizations": {
        "it": {
          "stringUnit": {
            "state": "translated",
            "value": "Progressi"
          }
...
